# RabbitCL

./: .CMakeLists.txt.swm  .cproject  .gitignore  .project  .vimrc  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  RabbitCL  RabbitCL.cpp  cmake_install.cmake  tags
cmake/: BuildBoostCompute.cmake  BuildClBLAS.cmake  BuildClBLASt.cmake  BuildRang.cmake  FindOpenCL.cmake
examples/: adagrad_feed_forward_example.cpp  rmsprop_big_matrices_example.cpp  rmsprop_feed_forward_example.cpp  simple_feed_forward_example.cpp  xor_adagrad_example.cpp  xor_example.cpp  xor_rmsprop_example.cpp
include/: .matrix.h.swm  Activation.h  Distributions.h  IdentityActivation.h  IdentityLayer.h  Layer.h  Memory.h  TanhActivation.h  TrainDef.h  activation.h  activation_function.h  context_manager.h  cost.h  data_pool.h  dense.h  dense_config.h  function.h  gradient_descent.h  input.h  input_config.h  kernel.h  kernel_class.h  kernel_error_class.h  layer_config.h  local.h  matrix.h  matrix_helpers.h  matrix_size.h  mozart.h  observer.h  optimizer.h  random_matrix_generator.h  raw.h  reporter.h  scalar.h  sequence.h  stat.h  utilities.h
include/function/: adagrad_update.h  categorical_cross_entropy.h  dot.h  element_add.h  element_add_assign.h  element_mul.h  inplace_columnwise_add.h  inplace_columnwise_subtract.h  inplace_reduce_column_sum.h  reduce_avg.h  relu.h  rmsprop_update.h  scalar_translate.h  scale.h  softmax.h  squared_error.h  squashmax.h  tanh.h
include/observer/: timed.h
include/opencl/: accuracy_rate.h  adagrad_update.h  categorical_cross_entropy.h  dot.h  element_add.h  element_add_assign.h  element_mul.h  inplace_columnwise_subtract.h  inplace_reduce_column_sum.h  reduce_avg.h  relu.h  rmsprop_update.h  scalar_translate.h  scale.h  softmax.h  squared_error.h  squashmax.h  tanh.h
include/optimizers/: adagrad.h  gradient_descent.h  rmsprop.h  stateful.h
include/reporter/: timed.h
include/stats/: accuracy.h
src/: Activation.cpp  Distributions.cpp  IdentityActivation.cpp  IdentityLayer.cpp  Layer.cpp  Memory.cpp  TanhActivation.cpp  TrainDef.cpp  activation.cpp  activation_function.cpp  cost.cpp  dense.cpp  dense_config.cpp  gradient_descent.cpp  input.cpp  input_config.cpp  layer_config.cpp  matrix.cpp  matrix_helpers.cpp  rabbit.cpp  random_matrix_generator.cpp  reporter.cpp  scalar.cpp  scratch.cpp  scratch.h  sequence.cpp  stat.cpp
src/function/: adagrad_update.cpp  categorical_cross_entropy.cpp  dot.cpp  element_add.cpp  element_add_assign.cpp  element_mul.cpp  inplace_columnwise_add.cpp  inplace_columnwise_subtract.cpp  inplace_reduce_column_sum.cpp  reduce_avg.cpp  relu.cpp  rmsprop_update.cpp  scalar_translate.cpp  scale.cpp  softmax.cpp  squared_error.cpp  squashmax.cpp  tanh.cpp
src/observer/: timed.cpp
src/opencl/: accuracy_rate.cpp  adagrad_update.cpp  categorical_cross_entropy.cpp  dot.cpp  element_add.cpp  element_add_assign.cpp  element_mul.cpp  inplace_columnwise_subtract.cpp  inplace_reduce_column_sum.cpp  reduce_avg.cpp  relu.cpp  rmsprop_update.cpp  scalar_translate.cpp  scale.cpp  softmax.cpp  squared_error.cpp  squashmax.cpp  tanh.cpp
src/optimizer/: gradient_descent.cpp
src/optimizers/: adagrad.cpp  gradient_descent.cpp  rmsprop.cpp
src/reporter/: timed.cpp
src/stats/: accuracy.cpp
test/: heed_test.cpp  mozart_test.cpp  rabbit_test.cpp
